# sylphis3d

./: LICENSE.txt  readme.txt
runtime/: LICENSE.txt  buildrel.py  compiler.py  readme.txt  sylphis update.iss  sylphis.iss
runtime/base/: benchmark.py  shaderbuild.py  system.cfg
runtime/base/core/: CSimpleActor.py  actor.py  cmdline.py  configfile.py  entry.py  loader.py  mthread.py  rpcproxy.py  rpcserver.py  sylphisexceptions.py  util.py
runtime/base/core/particlesystem/: __init__.py  loader.py  manager.py
runtime/base/devenv/: AboutDialog.py  MDIChild.py  MDISourceFrame.py  STCStyleEditor.py  StyledTextCtrls.py  WatchPanel.py  app.py  stc-styles.rc.cfg  stcprops.py
runtime/base/fonts/: casual.font
runtime/base/game/: __init__.py  client.py  hudbase.py
runtime/base/game/actors/: CCamera.py  CControlerBase.py  CControlerPath.py  CExplosion.py  CFollowCamera.py  CGame.py  CGrenadeLauncher.py  CInfo.py  CInfoActor.py  CJoint.py  CJointBall.py  CJointDoubleHinge.py  CJointHinge.py  CJointSlider.py  (+25 more)
runtime/base/maps/: maptest.cmap  maptest.qkm
runtime/base/materials/: fonts.mat  gui.mat  gui.shader  industrial.mat  makeshaders.py  models.mat  system.mat  test.mat
runtime/base/models/: bball.md3  jeep.md3  pistol.model  sky.smf  terrain.smf  tire.md3
runtime/base/particles/: smoke.xml  test.xml
runtime/base/pyui/: __init__.py  base.py  colors.py  core.py  desktop.py  dialogs.py  entry.py  grid.py  htlib.py  html.py  htmlElements.py  layouts.py  locals.py  renderer3d.py  rendererBase.py  sheet.py  themeBase.py  tree.py  viewer.py  widgets.py
runtime/base/scripts/: system.shader
runtime/base/shaders/: ambient.fp  ambient.vp  bloom.fp  blur.afp  blur_final.fp  blur_h.avp  blur_h.fp  blur_h_l.fp  blur_v.avp  blur_v.fp  blur_v_l.fp  blur_vert.fp  brightpass.fp  bump.fp  bump.vp  convtofp.fp  diffuse.fp  downsample.fp  downsample.vp  downsamplerect.fp  exposurecontrol.fp  luma_init.fp  motionblur.fp  motionblur.vp  oldfilm.fp  oldfilm.vp  oldfilmglare.fp  oldfilmglare.vp  parallax.fp  parallax.vp  particle.fp  particle.vp  refract.fp  refract.vp  sky.fp  sky.py  sky.vp  speed.fp  speed.vp  terrain.fp  (+4 more)
runtime/base/ui/: __init__.py  about.py  console.py  menus.py  postproc.py  sde.py  startdialog.py  variablecontrol.py
runtime/src/mapcompiler/: CHANGELOG  Makefile  Rules.make  SConstruct  mapcompiler.kdevprj  mapcompiler.kdevses  mapcompiler.lsm  mc.dev  todo
runtime/src/sylphis/: CHANGELOG.txt  CMakeLists.txt  Makefile  Rules.make  SConstruct  sylphis.dsp  sylphis.dsw  sylphis.kdevprj  sylphis.kdevses  sylphis.sln  sylphis.vcproj
runtime/src/sylphis/core/: SConscript
runtime/src/sylphis/core/include/: actor.h  actormover.h  animationblender.h  beamtree.h  bonekeyframe.h  bonetrack.h  bound.h  boundbox.h  buffer.h  build.h  cache.h  camera.h  client.h  commands.h  configfile.h  contents.h  controler.h  debugdrawing.h  engine.h  eventlistener.h  font.h  frustum.h  ftlibrary.h  globaldefs.h  gutil.h  imagefile.h  indexbuffer.h  inputdevice.h  interpolator.h  jconfig.h  jmorecfg.h  joint.h  jpeglib.h  light.h  material.h  materialparser.h  matrix.h  matrix3.h  md3model.h  mesh.h  (+54 more)
runtime/src/sylphis/core/include/glrenderer/: glrendersystem.h  glrendertexture.h  gltexture.h
runtime/src/sylphis/core/src/: Makefile  actor.cpp  actormover.cpp  animationblender.cpp  beamtree.cpp  bonekeyframe.cpp  bonetrack.cpp  boundbox.cpp  buffer.cpp  cache.cpp  camera.cpp  client.cpp  commands.cpp  configfile.cpp  controler.cpp  debugdrawing.cpp  engine.cpp  eventlistener.cpp  font.cpp  frustum.cpp  ftlibrary.cpp  gutils.cpp  imagefile.cpp  indexbuffer.cpp  inputdevice.cpp  interpolator.cpp  joint.cpp  light.cpp  main.cpp  material.cpp  materialparser.cpp  matrix.cpp  matrix3.cpp  md3model.cpp  mesh.cpp  meshloader3ds.cpp  meshmanager.cpp  model.cpp  modelmanager.cpp  myglu.c  (+49 more)
runtime/src/sylphis/core/src/cmapscene/: Makefile  brushmodel.cpp  brushmodel.h  cmap.cpp  cmap.h  cmapfile.h  cmapscene.cpp  cmapscene.h  typedefs.h
runtime/src/sylphis/core/src/glrenderer/: glrendersystem.cpp  glrendertexture.cpp  gltexture.cpp
runtime/src/sylphis/core/src/python/: Makefile  actors.py  client.py  entry.py  explosion.py  game.py  infoactor.py  initmodules.h  light.py  misc_model.py  missile.py  mthread.cpp  mthread.h  player.py  projectile.py  pyconsole.cpp  pyconsole.h  pyhelper.cpp  pyhelper.h  simpleactor.py  sylphis.i  util.py  waitable.cpp  waitable.h
runtime/src/sylphis/core/src/sound/: soundbuffer.cpp  soundbuffer.h  soundenv.cpp  soundenv.h  soundlistener.cpp  soundlistener.h  soundobject.cpp  soundobject.h  soundogg.cpp  soundogg.h  soundsource.cpp  soundsource.h  soundwave.cpp  soundwave.h
runtime/src/sylphis/doc/: doxygen.conf  shader_manual.tex
runtime/src/sylphis/hklib/: SConstruct  hklib.sln  hklib.vcproj  stdafx.cpp  stdafx.h
runtime/src/sylphis/hklib/hklib_test/: SConstruct  hklib_test.cpp  hklib_test.vcproj  stdafx.cpp  stdafx.h
runtime/src/sylphis/hklib/include/: classinfo.h  console.h  exception.h  pointer.h  refobject.h  serialize.h  serializer.h  singleton.h  vfs.h
runtime/src/sylphis/hklib/include/platform/: types.h
runtime/src/sylphis/hklib/src/: classinfo.cpp  console.cpp  exception.cpp  pointer.cpp  refobject.cpp  serialize.cpp  serializer.cpp  singleton.cpp  vfs.cpp
runtime/stdlib/: Queue.py  SimpleXMLRPCServer.py  SocketServer.py  _socket.pyd  _socket_d.pyd  _sre.pyd  bisect.py  copy.py  gettext.py  imputil.py  inspect.py  keyword.py  locale.py  ntpath.py  pickle.py  pprint.py  profile.py  pyexpat.pyd  pyexpat_d.pyd  random.py  rfc822.py  site.py  socket.py  sre.py  sre_parse.py  string.py  tabnanny.py  tempfile.py  textwrap.py  threading.py  tokenize.py  types.py  urllib.py
runtime/stdlib_linux/: BaseHTTPServer.py  SimpleHTTPServer.py  StringIO.py  UserDict.py  bdb.py  codecs.py  codeop.py  httplib.py  linecache.py  mimetools.py  opcode.py  os.py  pstats.py  sre_compile.py  traceback.py  urlparse.py  warnings.py  weakref.py  xmlrpclib.py
runtime/stdlib_linux/xml/: __init__.py
runtime/system/: importer.py  sylphis.py  sylphisextra.py
(+132 files in other folders)
